tests/snapshots/conformance__n_structure_unclosed_array_unfinished_false.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[ true, fals
stdout --- 
<empty>
stderr --- 
error: unexpected character `f`. expected start of a json value
 --> stdin:1:9
  |
1 | [ true, fals
  |         ^
